--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openlab/vercel-netlify-cms-github": "^1.1.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.6.0",
+    "netlify-cms-app": "^2.15.72",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
