--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "build-cms": "next build --legacy-peer-deps netlify-cms-app @openlab/vercel-netlify-cms-github"
+    "build-cms": "next build --legacy-peer-deps netlify-cms-app @openlab/vercel-netlify-cms-github",
+    "vercel-build": "NODE_OPTIONS=--legacy-peer-deps next build"
   },
   "dependencies": {
     "@openlab/vercel-netlify-cms-github": "^1.1.1",
