--- a/ vercel.json
+++ b/ vercel.json
@@ -1,9 +1,3 @@
 {
-  "trailingSlash": true,
-  "builds": [
-    { "src": "package.json", "use": "build-cms" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "index.html" }
-  ]
+  "trailingSlash": true
 }
