--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.65.5",
-    "@react-three/fiber": "^8.12.2",
     "@vercel/analytics": "^1.0.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -18,8 +16,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.32.0",
-    "three": "^0.151.3"
+    "sharp": "^0.32.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
