--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,11 +11,11 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
     "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "framer-motion": "^10.11.6",
-    "next": "^14.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "eslint-config-next": "15.2.4",
+    "framer-motion": "^12.6.0",
+    "next": "15.2.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "sharp": "^0.32.0"
   },
   "devDependencies": {
